tests/snapshots/run_wpt_conformance__onnx_concat_two_float32_4D_tensors_of_same_others_dimensions_except_different_1st_dimension_along_axis_0.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "concat.https.any.js",
    "concat two float32 4D tensors of same others dimensions except different 1st dimension along axis 0",
    "onnx",
    "PASS",
)
